# ts2g

./: LICENSE  README.md  setup.cfg
src/ts2g/: __init__.py  calculate.py  read.py  save.py
src/ts2g.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
