[metadata]
name = ts2g
version = 0.0.3
author = Kamyar Zeinalipour
author_email = k4my_r@yahoo.com
description = Converting time-series to graph using three different method which are natural visibility graph, horizontal visibility graph, and quantile graph
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/k4my4r/ts2g
project_urls =
    Bug Tracker = https://github.com/k4my4r/ts2g/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src